[tool.poetry]
name = "teams-ai"
version = "0.0.0"
description = "SDK focused on building AI based applications for Microsoft Teams."
authors = ["Microsoft Corp."]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
botbuilder-core = "^4.14.4"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
yapf = "^0.40.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
lint = "scripts:lint"
fmt = "scripts:fmt"
test = "scripts:test"
clean = "scripts:clean"
ci = "scripts:ci"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.pytest.ini_options]
addopts = "--cov-report html:coverage --cov=teams_ai"