[tool.poetry]
name = "teams"
version = "0.0.0"
description = "Teams SDK"
authors = ["Microsoft <teams@microsoft.com>"]
readme = "README.md"
packages = [
    { include = "packages" }
]

[tool.poetry.dependencies]
python = ">=3.8.3,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
yapf = "^0.40.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
build = "scripts:build"
check = "scripts:check"
ci = "scripts:ci"
clean = "scripts:clean"
fmt = "scripts:fmt"
install = "scripts:install"
lint = "scripts:lint"
test = "scripts:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.pytest.ini_options]
addopts = "--cov-report html:coverage --cov=teams"