[tool.poetry]
name = "echo"
version = "0.0.0"
description = "Echo Sample"
authors = ["Microsoft <teams@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
teams-ai = { path = "../../packages/ai" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.scripts]
lint = "scripts:lint"
fmt = "scripts:fmt"
test = "scripts:test"
clean = "scripts:clean"
ci = "scripts:ci"
start = "scripts:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov-report html:coverage --cov=echo"